Changes
=======

Next Release
------------

New features:

- Addition of ``rasterio.delete()`` and ``$ rio rm`` for deleting
  datasets (#929).


1.0a10 (2017-10-09)
-------------------

Breaking changes:

- In the GeoJSON output of rio-blocks, the windows are now JSON
  representations of the ``Window`` class (#1074).
- The ``rasterio.windows.Window`` class no longer derives from ``tuple``.
  Comparisons like ``Window(0, 0, 1, 1) == ((0, 1), (0, 1))`` are no
  longer possible. Instead, call the ``.toranges()`` method of the 
  former or coerce the latter using ``Window.from_ranges`` (#1074).
- The ``rasterio.windows.from_bounds`` function now always returns unbounded,
  meaning uncropped, Windows. For example, if given a bounding box entirely
  to the west and north of the geotransform's origin, the result will be a 
  Window entirely to the left and above the dataset's row and column origin.
  Passing a ``boundless`` keyword argument to this function will result in a 
  warning.
- The ``TransformMethodsMixin.ul`` method, deprecated since 0.36, has been
  removed (#1100).

New features:

- Float precision read/write windows are now supported throughout
  Rasterio (#1074).
- Use of old style range tuples as windows is deprecated and warned
  against (#1074).
- Addition of dataset ``block`` method (#1077).
- Added access to subdatasets, both in the API and CLI (see `rio info
  --subdatasets`) (#1127).

Bug fixes:

- We always reacquire the GIL when GDAL calls the rasterio logging error
  handler (#1103, #1104).
- Rasterio's boundless reading has had a compositing bug. We are resolving
  it by using a VRT internally and relying upon the VRT's windowing and
  compositing logic (#1161).
- AWS credentials set in an ``Env`` are no longer clobbered by credentials
  from a default boto3 session inside ``rasterio.open`` (#1075).
- NaN can now be used as a nodata value in ``merge`` and when setting nodata
  from `rio edit-info` (#1160).

1.0a9 (2017-06-02)
------------------