@@ -70,8 +70,6 @@ VERSION.txt
 rasterio/_fill.cpp
 rasterio/_warp.cpp
 rasterio/_base.c
-rasterio/_manage.c
-rasterio/_drivers.c
 rasterio/_err.c
 rasterio/_example.c
 rasterio/_features.c
@@ -80,6 +78,7 @@ rasterio/_crs.c
 rasterio/_env.c
 rasterio/_shim.c
 rasterio/_shim.pyx
+rasterio/shutil.c
 tests/data/white-gemini-iv.zip
 
 # vim
