@@ -15,6 +15,7 @@ from rasterio.errors import CRSError
 from rasterio.coords import disjoint_bounds
 from rasterio.rio import options
 from rasterio.rio.helpers import resolve_inout
+import rasterio.shutil
 
 
 logger = logging.getLogger('rio')
@@ -153,7 +154,7 @@ def rasterize(
 
         geojson_bounds = geojson.get('bbox', calculate_bounds(geojson))
 
-        if rasterio.exists(output):
+        if rasterio.shutil.exists(output):
             with rasterio.open(output, 'r+') as out:
                 if has_src_crs and src_crs != out.crs:
                     raise click.BadParameter('GeoJSON does not match crs of '
