@@ -6,7 +6,7 @@ import logging
 import click
 from cligj import precision_opt
 
-import rasterio
+import rasterio.shutil
 
 
 @click.command(short_help="Transform coordinates.")
@@ -32,12 +32,12 @@ def transform(ctx, input, src_crs, dst_crs, precision):
         with ctx.obj['env']:
             if src_crs.startswith('EPSG'):
                 src_crs = {'init': src_crs}
-            elif rasterio.exists(src_crs):
+            elif rasterio.shutil.exists(src_crs):
                 with rasterio.open(src_crs) as f:
                     src_crs = f.crs
             if dst_crs.startswith('EPSG'):
                 dst_crs = {'init': dst_crs}
-            elif rasterio.exists(dst_crs):
+            elif rasterio.shutil.exists(dst_crs):
                 with rasterio.open(dst_crs) as f:
                     dst_crs = f.crs
             for line in src:
