@@ -4,13 +4,12 @@
 import pytest
 
 import rasterio
+import rasterio.shutil
 from rasterio.rio.main import main_group
 
 
 @pytest.mark.parametrize("driver", (None, 'GTiff'))
 def test_rm(runner, driver, path_rgb_byte_tif, tmpdir):
-
-    """Delete a file with ``rasterio.delete()``.  Also specifies driver."""
 
     path = str(tmpdir.join('test_rm.tif'))
     rasterio.copy(path_rgb_byte_tif, path)
@@ -21,7 +20,7 @@ def test_rm(runner, driver, path_rgb_byte_tif, tmpdir):
 
     result = runner.invoke(main_group, args)
     assert result.exit_code == 0
-    assert not rasterio.exists(path), path
+    assert not rasterio.shutil.exists(path), path
 
 
 def test_rm_invalid_dataset(runner):
@@ -46,4 +45,4 @@ def test_rm_invalid_driver(runner, tmpdir, path_rgb_byte_tif):
     assert "Unrecognized driver: trash" in result.output
 
     # File still exists since test failed.  Cleanup.
-    rasterio.delete(path)
+    rasterio.shutil.delete(path)
