@@ -4,10 +4,16 @@ Changes
 Next Release
 ------------
 
+Breaking changes:
+
+- ``rasterio.copy()`` moved to ``rasterio.shutil.copy() (#1173).
+
 New features:
 
-- Addition of ``rasterio.delete()`` and ``$ rio rm`` for deleting
+- Addition of ``rasterio.shutil.delete()`` and ``$ rio rm`` for deleting
   datasets (#929).
+- Addition of ``rasterio.shutil.exists()`` for determining if a dataset
+  exists (#1173).
 
 
 1.0a10 (2017-10-09)
